Added Sent Out Logic to Tickets

--- a/ticketing/static/style.css
+++ b/ticketing/static/style.css
@@ -10,10 +10,14 @@ html {
     background: white;
   }
   
-  h1, h2, h3, h4, h5, h6 {
+  h1, h2, h3, h5, h6 {
     font-family: serif;
     color: #377ba8;
     margin: 1rem 0;
+  }
+
+  h4 {
+    display: inline;
   }
   
   a {
