--- a/ticketing/templates/app/ticket/tickets.html
+++ b/ticketing/templates/app/ticket/tickets.html
@@ -4,6 +4,7 @@
   <h1>{% block title %}Tickets{% endblock %}</h1>
   {% if g.user %}
     <a class="action" href="{{ url_for('tickets.customer_landing') }}">New Ticket</a>
+    <a class="action" href="{{ url_for('tickets.options') }}">Options</a>
   {% endif %}
 {% endblock %}
 
@@ -11,12 +12,20 @@
   {% for t in tickets %}
     <article class="ticket">
         <header>
-            <div>
-                <h2>#{{ t['id'] }} | {{ t['last_name'] }}</h2>
-            </div>
-            {% if g.user %}
-            <a class="action" href="{{ url_for('tickets.update', id=t['id']) }}">Edit</a>
-            {% endif %}
+            <ul>
+              <li style="display: inline-block;">
+                <h2>#{{ t['id'] }} | {{ t['last_name'] }} | </h2>
+              </li>
+              <li style="display: inline-block;">
+                <a class="action" href="{{ url_for('tickets.update', id=t['id']) }}">Update</a>
+              </li>
+              <li style="display: inline-block;">
+                <a class="action" href="{{ url_for('tickets.sendout', id=t['id']) }}">Send Out</a>
+              </li>
+              <li style="display: inline-block;">
+                <a class="action" href="{{ url_for('tickets.complete', id=t['id']) }}">Complete</a>
+              </li>
+            </ul>
         </header>
         <div class="about"> Phone: {{ t['phone'] }}</div>
         <div class="about">Type: {{ t['ticket_type'] }}</div>
