Added Completed functionality and update other

--- a/ticketing/templates/app/ticket/tickets.html
+++ b/ticketing/templates/app/ticket/tickets.html
@@ -29,7 +29,7 @@
         </header>
         <div class="about"> Phone: {{ t['phone'] }}</div>
         <div class="about">Type: {{ t['ticket_type'] }}</div>
-        <div class="about">Created: {{ t['created'] }}</div>
+        <div class="about">Status: {{ t['ticketstatus'] }}</div>
         <p class="body">{{ t['ticket_description'] }}</p>
     </article>
     {% if not loop.last %}
