--- a/ticketing/templates/app/ticket/update.html
+++ b/ticketing/templates/app/ticket/update.html
@@ -16,11 +16,8 @@
           </select>
         <label for="ticket_description">Ticket Description</label>
         <textarea name="ticket_description" id="ticket_description" value="{{ request.form['ticket_description'] or ticket['ticket_description'] }}" required></textarea>
-        <label for="ticketstatus">Ticket Status</label>
-        <select name="ticketstatus" id="ticketstatus" type="date" value="{{ request.form['ticketstatus'] or ticket['ticketstatus'] }}" required>
-          <option value="new">New</option>
-          <option value="in progress">In Progress</option>
-        </select>
+        <label for="ticketstatus">In Progress</label>
+        <input name="ticketstatus" id="ticketstatus" type="checkbox" value="{{ request.form['ticketstatus'] or ticket['ticketstatus'] }}">
         <label for="promised">Promised</label>
         <input name="promised" id="promised" type="date" value="{{ request.form['promised'] or ticket['promised'] }}">
         <input type="submit" value="Save">
