--- a/ticketing/templates/base.html
+++ b/ticketing/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Deakynes Ticketing</title>
+<title>{% block title %}{% endblock %} - Deakynes Hardware</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
   <h1>Deakynes Ticketing</h1>
