Added WTForm render_field to the html views.

--- a/ticketing/templates/app/customer/create.html
+++ b/ticketing/templates/app/customer/create.html
@@ -5,15 +5,14 @@
 {% endblock %}
 
 {% block content %}
-    <form method="post">
-        <label for="first_name">First Name</label>
-        <input name="first_name" id="first_name" value="{{ request.form['first_name'] }}" required>
-        <label for="last_name">Last Name</label>
-        <input name="last_name" id="last_name" value="{{ request.form['last_name'] }}" required>
-        <label for="street_address">Street Address</label>
-        <input name="street_address" id="street_address" value="{{ request.form['street_address'] }}" required>
-        <label for="phone">Phone Number</label>
-        <input name="phone" id="phone" value="{{ request.form['phone'] }}" required>
-        <input type="submit" value="Save">
-    </form>
+{% from "_formhelpers.html" import render_field %}
+  <form method=post>
+    <dl>
+      {{ render_field(form.firstname) }}
+      {{ render_field(form.lastname) }}
+      {{ render_field(form.address) }}
+      {{ render_field(form.phone) }}
+      {{ render_field(form.email) }}
+    </dl>
+  </form>
 {% endblock %}
