--- a/ticketing/templates/app/customer/update.html
+++ b/ticketing/templates/app/customer/update.html
@@ -5,16 +5,15 @@
 {% endblock %}
 
 {% block content %}
-    <form method="POST">
-        <label for="first_name">First Name</label>
-        <input name="first_name" id="first_name" value="{{ request.form['first_name'] or customer['first_name'] }}" required></input>
-        <label for="last_name">Last Name</label>
-        <input name="last_name" id="last_name" value="{{ request.form['last_name'] or customer['last_name'] }}">
-        <label for="street_address">Street Address</label>
-        <input name="street_address" id="street_address" value="{{ request.form['street_address'] or customer['street_address'] }}">
-        <label for="phone">Phone Number</label>
-        <input name="phone" id="phone" value="{{ request.form['phone'] or customer['phone'] }}" required>
-        <input type="submit" value="Save">
+{% from "_formhelpers.html" import render_field %}
+    <form method=post>
+        <dl>
+        {{ render_field(form.firstname) }}
+        {{ render_field(form.lastname) }}
+        {{ render_field(form.address) }}
+        {{ render_field(form.phone) }}
+        {{ render_field(form.email) }}
+        </dl>
     </form>
     <hr>
     <form action="{{ url_for('customers.delete', id = customer['id']) }}" method="POST">
