--- a/ticketing/templates/app/ticket/complete.html
+++ b/ticketing/templates/app/ticket/complete.html
@@ -5,20 +5,15 @@
 {% endblock %}
 
 {% block content %}
-    <form method="POST">
-        <label for="labor">Labor Cost</label>
-        <input name="labor" id="labor" value="{{ request.form['labor'] or ticket['labor'] }}" required>
-        <label for="parts">Parts Cost</label>
-        <input name="parts" id="parts" value="{{ request.form['parts'] or ticket['parts'] }}" required>
-        <label for="other">Other Costs</label>
-        <input name="other" id="other" value="{{ request.form['other'] or ticket['other'] }}">
-        <label for="notes">Notes</label>
-        <textarea name="notes" id="notes" value="{{ request.form['notes'] or ticket['notes'] }}"></textarea>
-        <label for="called">Called</label>
-        <input name="called" id="called" type="checkbox" value="{{ request.form['called'] or ticket['called'] }}">
-        <label for="pickedup">Picked up</label>
-        <input name="pickedup" id="pickedup" type="checkbox" value="{{ request.form['pickedup'] or ticket['pickedup'] }}">
-        <input type="submit" value="Complete">
-    </form>
+  {% from "_formhelpers.html" import render_field %}
+  <form method=post>
+    <dl>
+      {{ render_field(form.labor) }}
+      {{ render_field(form.parts) }}
+      {{ render_field(form.other) }}
+      {{ render_field(form.notes) }}
+      {{ render_field(form.bNotified) }}
+    </dl>
+  </form>
     <hr>
 {% endblock %}
